src/test/deca/syntax/invalid/resultats/test7_string-lex.res
INFO  fr.ensimag.deca.syntax.DecacErrorListner.syntaxError(DecacErrorListner.java:50) - no token, no LocationException => using input.getSourceName(): line=10
./src/test/deca/syntax/invalid/test7_string.deca:10:0: token recognition error at: '"chaine pas finie'
